--- a/style.css
+++ b/style.css
@@ -3,11 +3,17 @@
     padding: 0;
 }
 
-nav {
+nav ul {
     background-color: greenyellow;
     border: 1px solid darkslateblue;
+    margin-bottom: 20px;
+}
+
+nav ul li {
+    display: inline-block;
 }
 
 nav ul li a {
     text-decoration: none;
+    margin-right: 5px;
 }
